--- a/greetings.html
+++ b/greetings.html
@@ -1,9 +1,12 @@
 <html> 
 <head>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&display=swap" rel="stylesheet">
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: didot, serif;
+    font-family: 'Crimson-Pro', serif;
     font-size: xx-large;
     color: #626262;
     padding: 5px;
