--- a/greetings.html
+++ b/greetings.html
@@ -1,11 +1,10 @@
 <html> 
 <head>
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&display=swap" rel="stylesheet">
     <title>Greeting Message</title> 
     <style>
 #lbl {
+    font-family: 'Crimson-Pro', serif;
+    font-size: xx-large;
     color: #626262;
     padding: 5px;
     border: 1px solid #ececec;
