--- a/nav.html
+++ b/nav.html
@@ -58,12 +58,12 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house fa-2xs"></i> Home</a>
-    <a id="health" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart-pulse fa-2xs"></i> Health</a>
-	  <a id="for-me" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-face-smile-beam fa-2xs"></i> For Me</a>
-    <a id="work" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-display fa-2xs"></i> Work</a>
-    <a id="fun" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-sparkles fa-2xs"></i> Fun</a>
-    <a id="info" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-info fa-2xs"></i> Info</a>
+		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
+    <a id="health" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart-pulse"></i> Health</a>
+	  <a id="for-me" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-face-smile-beam"></i> For Me</a>
+    <a id="work" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-display"></i> Work</a>
+    <a id="fun" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-sparkles"></i> Fun</a>
+    <a id="info" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-info"></i> Info</a>
 
 
 	</nav>
