--- a/nav.html
+++ b/nav.html
@@ -62,7 +62,7 @@
     <a id="health" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart-pulse"></i> Health</a>
 	  <a id="for-me" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-face-smile-beam"></i> For Me</a>
     <a id="work" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-display"></i> Work</a>
-    <a id="fun" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-sparkles"></i> Fun</a>
+    <a id="fun" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-star"></i> Fun</a>
     <a id="info" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-info"></i> Info</a>
 
 
