--- a/nav.html
+++ b/nav.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #BF2D52;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
