--- a/nav.html
+++ b/nav.html
@@ -57,7 +57,7 @@
 
 <body>
 
-	<nav class="navMenu  border">
+	<nav class="navMenu  border background">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
     <a id="health" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart-pulse"></i> Health</a>
 	  <a id="for-me" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-face-smile-beam"></i> For Me</a>
