--- a/nav.html
+++ b/nav.html
@@ -40,11 +40,11 @@
 		}
 
 		.background {
-			background-color: #ece5f0;
+			background-color: #F6B690;
 		}
 
 		.border {
-			border: 1px solid #cccccc;
+			border: 0px solid #cccccc;
 
 		}
 
