--- a/nav.html
+++ b/nav.html
@@ -25,6 +25,7 @@
 
 		.navMenu {
 			font-family: 'Almendra Display', cursive;
+			font-size: 40px;
 			padding: 8px;
 			text-align: center;
 			margin: 7px auto;
