--- a/nav.html
+++ b/nav.html
@@ -59,12 +59,12 @@
 <body>
 
 	<nav class="navMenu  border background">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-    <a id="health" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart-pulse"></i> Health</a>
-	  <a id="for-me" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-face-smile-beam"></i> For Me</a>
-    <a id="work" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-display"></i> Work</a>
-    <a id="fun" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-star"></i> Fun</a>
-    <a id="info" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-info"></i> Info</a>
+		<a id="home" onclick="navigate(this.id)" href="#"> Home</a>
+    <a id="health" onclick="navigate(this.id)" href="#"> Health</a>
+	  <a id="for-me" onclick="navigate(this.id)" href="#"> For Me</a>
+    <a id="work" onclick="navigate(this.id)" href="#"> Work</a>
+    <a id="fun" onclick="navigate(this.id)" href="#"> Fun</a>
+    <a id="info" onclick="navigate(this.id)" href="#"> Info</a>
 
 
 	</nav>
