--- a/nav.html
+++ b/nav.html
@@ -81,7 +81,7 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://example.com", '_blank').focus();
+				window.open("https://www.notion.so/Home-97e9535915bd468b8d5b755634e3a0e0?pvs=4", '_blank').focus();
 			else if (id == "health")
 				window.open("https://health.com", '_blank').focus();
 		  else if (id == "for-me")
