--- a/nav.html
+++ b/nav.html
@@ -82,8 +82,8 @@
 
 			if (id == 'home')
 				window.open("https://www.notion.so/Home-97e9535915bd468b8d5b755634e3a0e0?pvs=4", '_blank').focus();
-			else if (id == "health")
-				window.open("https://www.notion.so/Health-f0d7a6ecee4a4822b2ff5ce189cd3a23?pvs=4", '_parent').focus();
+			if (id == "health")
+				window.open("https://www.notion.so/Health-f0d7a6ecee4a4822b2ff5ce189cd3a23?pvs=4", '_blank').focus();
 		  else if (id == "for-me")
 				window.open("https://www.notion.so/For-Me-90499bcb5b6345ca80205e5f8d611952?pvs=4", '_top').focus();
       else if (id == "work")
