--- a/nav.html
+++ b/nav.html
@@ -82,12 +82,12 @@
 
 			if (id == 'home')
 				window.open("https://www.notion.so/Home-97e9535915bd468b8d5b755634e3a0e0?pvs=4", '_blank').focus();
-			if (id == "health")
+			else if (id == "health")
 				window.open("https://www.notion.so/Health-f0d7a6ecee4a4822b2ff5ce189cd3a23?pvs=4", '_blank').focus();
 		  else if (id == "for-me")
-				window.open("https://www.notion.so/For-Me-90499bcb5b6345ca80205e5f8d611952?pvs=4", '_top').focus();
+				window.open("https://www.notion.so/For-Me-90499bcb5b6345ca80205e5f8d611952?pvs=4", '_blank').focus();
       else if (id == "work")
-				window.open("https://www.notion.so/Work-d964fcf027ef4f1a97125c430a551a47?pvs=4", '_self').focus();
+				window.open("https://www.notion.so/Work-d964fcf027ef4f1a97125c430a551a47?pvs=4", '_blank').focus();
       else if (id == "fun")
 				window.open("https://www.notion.so/Fun-849fcd3630b24c1b8dff545103541270?pvs=4", '_blank').focus();
       else if (id == "info")
