--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/53d38n1d47/sheffield/" data-font="Courier New" data-icons="Climacons Animated" >Sheffield, UK</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/53d38n1d47/sheffield/" data-font="Ubuntu" data-icons="Climacons Animated" data-textcolor="#bf2d52" data-highcolor="#bf2d52" data-lowcolor="#bf2d52" data-suncolor="#e7a374" data-mooncolor="#e7a374" data-cloudcolor="#e7a374" data-cloudfill="#e7a374" data-raincolor="#bf2d52" data-snowcolor="#bf2d52" >Sheffield, UK</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
